<resources>
    <string name="title_activity_maps">Maps</string>
    <string name="app_name">Time Guide</string>
    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="test3">Test3</string>
    <string name="test4">Test4</string>
    <string name="ReminderDefault">Default</string>
    <string name="ReminderCustom">Custom</string>
    <string name="CalendarString">Calendar :\u0020</string>
    <string name="empty">--</string>
    <string name="ok">OK</string>
    <string name="cancel">No</string>
    <string name="error">Error</string>
    <string name="permissionExplanation">Look, we really need your location because of maps&#8230;</string>
    <string name="switchOnLocationShort">Oops - you seem to have disabled location services at the moment. This app
        really needs your location in order to work properly. To continue, please click on "OK".</string>
    <string name="switchOnLocationLong">Oops - you seem to have disabled location services at the moment. This app
        really needs your location in order to work properly. To continue, please click on "OK" and enable
        location.</string>
    <string name="permissionPermanentlyDeclined">You have permanently declined the location permission.
        Please change your permission settings.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar_name_view">CalendarNameView</string>
    <string name="dialog_start">Add your place to favourite places</string>
    <string name="dialog_title">NEW PLACE</string>
    <string name="dialog_del">Are you sure ?</string>
    <string name="NotificationTitle">Time Guide - Notification</string>
    <string name="TooLateNoti">You will not be on time! Quick!You must use teleportation!</string>
    <string name="AddedNoti">Notification Added</string>
    <string name="NoConnectionAVB">No network connection available.</string>
    <string name="EventInfostatus">Status</string>
    <string name="EventInfoprivacy">Privacy</string>
    <string name="EventInfonotifications_default">Notifications (default)</string>
    <string name="find_path_btn">Find path</string>
    <string name="start_point">Enter the starting point</string>
    <string name="end_point">Enter the end point</string>
    <string name="finding_direction_content">Finding direction…</string>
    <string name="finding_direction_title">Please wait.</string>
    <string name="place_added">Place added</string>
    <string name="place_exists">Place already exists</string>
    <string name="google_places_connected">Google Places API connected.</string>
    <string name="google_places_suspended">Google Places API connection suspended.</string>
    <string name="delete_my_place">delete my place</string>
    <string name="cancelOperation">Cancel</string>
    <string name="delete">Delete</string>
    <string name="destination_address">Destination address</string>
    <string name="place_name">Place name</string>
    <string name="add">Add</string>
    <string name="EmptyError">Place can not be empty</string>
    <string name="existsError">Place already exists</string>
    <string name="DestinationEmpty">Place destination can not be empty</string>
    <string name="welcome_to_the_time_guide_app">Welcome to the Time Guide app</string>
    <string name="this_short_introduction_will_show_you_how_to_navigate_through_the_app">This short introduction will show you how to navigate through the app.</string>
    <string name="click_on_toolbar_items_in_order_to_access_shortest_path_calendar_and_my_places_views">Click on toolbar items in order to access Shortest Path , Calendar and My Places Views.</string>
    <string name="shortest_path">Shortest Path</string>
    <string name="this_part_of_the_app_lets_you_freely_control_the_map_in_order_to_find_shortest_path_you_can_either_type_them_manually_or_use_google_autocomplete_hints_or_click_on_your_location_at_the_top_of_a_screen_in_order_to_fill_the_form_automatically_additionaly_when_you_hold_your_finger_on_the_map_marker_will_be_created_with_te_clicked_position_address_there_will_be_also_marker_showing_your_current_position_when_you_will_send_request_both_starting_point_and_finifh_point_markers_will_be_added_when_you_tap_on_the_marker_you_can_see_the_marker_address_when_you_click_on_this_information_the_adrress_will_be_automatically_added_to_your_favourite_places">This part of the app lets you freely control the map, in order to find shortest path you can either type them manually (or use google autocomplete hints) or click on your location at the top of a screen in order to fill the form automatically. Additionally when you hold your finger on the map marker will be created with the clicked position address. There will be also marker showing your current position. When you will send request both starting point and finish point markers will be added. When you tap on the marker you can see the marker address when you click on this information the address will be automatically added to your favourite places</string>
    <string name="toolbar_setup">toolbar setup</string>
    <string name="image_showing_layout_of_the_maps_view">image showing layout of the maps view</string>
    <string name="calendar">Calendar</string>
    <string name="image_showing_calendar_view">image showing calendar view</string>
    <string name="at_the_top_of_a_screen_you_can_select_your_calendars_connected_to_google_and_our_app_will_synchronize_the_events_with_the_location_so_you_will_always_be_on_time_dynamic_notifications_will_make_sure_of_that_at_the_bottom_of_a_screen_is_a_list_with_the_events_fors_current_day_which_you_can_click_on_in_order_to_access_the_details">At the top of a screen you can select your calendars connected to Google and our app will synchronize the events with the location so you will always be on time (dynamic notifications will make sure of that).In the middle there is a calendar which you can use to navigate through the days(Android 5.0 and below may have different calendar however the features are the same). At the bottom of a screen is a list with the events for current day which you can click on in order to access the details.</string>
    <string name="my_favourite_places">My favourite places</string>
    <string name="good_luck_and_have_fun_may_the_time_and_organization_be_with_you">Good luck and have fun! May the time and organization be with you.</string>
    <string name="this_part_consists_of_elements_resembling_your_saved_favourite_places_if_you_swipe_down_on_the_screen_you_can_get_the_amount_of_time_you_will_need_in_order_to_reach_certain_place_from_your_current_loaction_if_you_click_on_one_of_the_elemts_it_will_send_you_to_the_map_with_autocompleted_destination_so_you_can_just_search_for_the_route_also_if_you_will_click_on_the_x_symbol_you_can_delete_the_place_don_t_worry_if_you_missclick_it_is_two_step_process_on_the_bottom_left_there_is_a_button_that_opens_a_dialog_for_creating_new_places">This part consists of elements resembling your saved favourite places. If you swipe down on the screen you can get the amount of time you will need in order to reach certain place from your current loaction. If you click on one of the elements it will send you to the map with autocompleted destination so you can just search for the route :). Also if you will click on the X symbol you can delete the place, don\'t worry if you miss click it is two step process. On the bottom left there is a button that opens a dialog for creating new places.</string>
</resources>
